--- a/src/styles/ForgotPassword.module.css
+++ b/src/styles/ForgotPassword.module.css
@@ -14,7 +14,8 @@
   background-color: rgb(29, 4, 53);
   border-radius: 5px;
   background: linear-gradient(to right, rgb(49, 6, 67), rgb(186, 122, 198));
-  /* background: linear-gradient(to right, rgb(67, 124, 205), rgb(69, 214, 202)); */
+  /* background: linear-gradient(to righ
+  t, rgb(67, 124, 205), rgb(69, 214, 202)); */
 }
 
 .register {
@@ -35,10 +36,18 @@
 }
 .button {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  cursor: pointer;
   margin-top: 15px;
   width: 80px;
 }
 .message {
   font-style: italic;
   color: rgb(255, 0, 0);
+}
+
+.anchor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
 }
