--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -35,10 +35,32 @@
 }
 .button {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  cursor: pointer;
   margin-top: 15px;
   width: 80px;
 }
 .message {
   font-style: italic;
   color: rgb(255, 0, 0);
+}
+
+.anchor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.login {
+  color: blue;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.forgot {
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  margin-top: 20px;
+  font-size: 12px;
+  text-decoration: underline;
 }
